--- a/package.json
+++ b/package.json
@@ -8,10 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/multimonth": "^6.1.11",
+    "@fullcalendar/timegrid": "^6.1.11",
+    "@fullcalendar/vue": "^6.1.11",
     "axios": "^1.3.6",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.10",
     "element-ui": "^2.15.13",
+    "iview": "^3.5.4",
     "normalize.css": "^8.0.1",
+    "tippy.js": "^6.3.7",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
